# hooperits-ai-agent-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  env.example  install.sh  model_tiers.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
hooperits_agent/: config.py  gemini_ops.py  git_ops.py  main.py  project_analyzer.py  state_manager.py  utils.py
tests/: __init__.py  conftest.py
tests/unit/: test_utils.py
